--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   scroll-behavior: smooth;
+  height: 100%;
 
   @media only screen and (max-width: 1200px) {
     font-size: 55%;
@@ -37,7 +38,8 @@ body {
   font-family: 'Apercu', sans-serif;
   font-weight: 400;
   position: relative;
-  min-height: 100vh;
+  min-height: 100%;
+  height: 100%;
 }
 
 cf-list {
@@ -45,11 +47,11 @@ cf-list {
 }
 
 .cf-progressBar {
-  height: 10rem !important;
+  height: 1 !important;
   background: linear-gradient(to right, #2c2c2e, white);
 
   @media only screen and (max-width: 850px) {
-    height: 12rem !important;
+    height: 1rem !important;
   }
 }
 
@@ -63,4 +65,12 @@ cf-list {
 
 a {
   text-decoration: none;
+}
+
+#___gatsby {
+  height: 100%;
+}
+
+#___gatsby > div {
+  height: 100%;
 }
